Overflow scroll fixed BgGradient

--- a/ui/src/components/ManagePage/Manage.css
+++ b/ui/src/components/ManagePage/Manage.css
@@ -121,5 +121,5 @@
 }
 .manage-background-list{
   overflow: auto;
-  height: 35rem;
+  height: 30rem;
 }
